--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="lib/swiper-bundle.min.css">
+    <link rel="stylesheet" href="hkustimber/reset.css">
+    <link rel="stylesheet" href="hkustimber/home.css">
+    <link rel="stylesheet" href="hkustimber/swiper-bundle.min.css">
     <style>
         html,
         body {
